fix barplot svg using json data, adjust to original heatmap contrast (0.7), add mouse over event for row and col tracking, label highlighting, and tooltip for values; move barplot to right click

--- a/design/css/palette.css
+++ b/design/css/palette.css
@@ -179,3 +179,6 @@ p.cap:first-letter {
 .label-orange {
 	background-color: #ff912e;
 }
+.label-dark-red {
+	background-color: #d86f5c;
+}
